--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "firebase": "^12.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-fast-marquee": "^1.6.5",
     "react-router": "^7.9.4",
     "react-router-dom": "^7.9.4",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
